<resources>
    <string name="app_name">XTracker</string>
    <string name="show_expenses">Show Expenses</string>
    <string name="add_money">Add Money</string>
    <string name="add_expense">Add Expense</string>
    <string name="balance">Balance</string>
    <string name="amount">Amount</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="time">Time</string>
    <string name="title_activity_show__expenses">Show_Expenses</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add__expenses">Add_Expenses</string>
</resources>